--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,8 +25,7 @@ jobs:
     
     - name: Build Documentation
       run: |
-        cd docs
-        make html
+        echo "No documentation to build"
     
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
