--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,53 +7,53 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9, "3.10", "3.11"]
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-    
-    - name: Lint with Black
-      run: |
-        black --check . --line-length=88
-    
-    - name: Lint with Flake8
-      run: |
-        flake8 . --max-line-length=88 --extend-ignore=E203,W503
-    
-    - name: Type-check with MyPy
-      run: |
-        mypy . --ignore-missing-imports --strict-optional --no-strict-optional --warn-redundant-casts --warn-unused-ignores --warn-no-return --warn-unreachable --strict-equality
-    
-    - name: Test with Pytest
-      run: |
-        pytest --cov=. --cov-report=xml --cov-report=term-missing --cov-report=html
-    
-    - name: Upload coverage Report
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-report
-        path: htmlcov/
-    
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, "3.10", "3.11"]
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+    
+    - name: Lint with Black
+      run: |
+        black --check . --line-length=88
+    
+    - name: Lint with Flake8
+      run: |
+        flake8 . --max-line-length=88 --extend-ignore=E203,W503
+    
+    - name: Type-check with MyPy
+      run: |
+        mypy . --ignore-missing-imports --strict-optional --no-strict-optional --warn-redundant-casts --warn-unused-ignores --warn-no-return --warn-unreachable --strict-equality
+    
+    - name: Test with Pytest
+      run: |
+        pytest --cov=. --cov-report=xml --cov-report=term-missing --cov-report=html
+    
+    - name: Upload coverage Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: htmlcov/
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage.xml
         flags: unittests,fail_ci_if_error
 
   build-docker:
@@ -62,16 +62,16 @@ jobs:
     
     steps:
     - name: Setup Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
     
     - name: Login to DockerHub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     
     - name: Build and push Docker image
-      uses: docker/build-push-action@v4
+      uses: docker/build-push-action@v5
       with:
         context: .
         push: true
@@ -85,7 +85,7 @@ jobs:
     
     steps:
     - name: Run Trivy Docker Scanner
-      uses: aquasecurity/trivy-action@master
+      uses: aquasecurity/trivy-action@0.28.0
       with:
         scan-type: image
         input-ref: ${{ secrets.DOCKERHUB_USERNAME }}/llm-advanced-testing-suite:latest
@@ -93,7 +93,7 @@ jobs:
         output: trivy-results.sarif
     
     - name: Upload Trivy Scan Result
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: trivy-results.sarif
 
@@ -106,7 +106,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Setup Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: "3.10"
     
@@ -123,7 +123,7 @@ jobs:
         make html
     
     - name: Upload Documentation Artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: documentation
         path: docs/build/html
@@ -135,14 +135,14 @@ jobs:
     
     steps:
     - name: Download Artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         pattern: coverage-report
         name: coverage-report
         path: coverage-report
     
     - name: Download Documentation Artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         pattern: documentation
         name: documentation
@@ -167,10 +167,10 @@ jobs:
         echo "- Optimized memory usage" >> release_notes.md
         echo "- Reduced test execution time" >> release_notes.md
     
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./release_notes.md
-        asset_name: release_notes.md
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v2
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./release_notes.md
+        asset_name: release_notes.md
         asset_content_type: text/plain
