--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   llm-testing-suite:
-    image: llm-advanced-testing-suite:latest
+    image: llmtest24:latest
     container_name: llm-testing-suite
     environment:
       - PYTHONPATH=/app
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
 
   llm-testing-suite-api:
-    image: llm-advanced-testing-suite:latest
+    image: llmtest24:latest
     container_name: llm-testing-suite-api
     environment:
       - PYTHONPATH=/app
@@ -37,7 +37,7 @@ services:
     restart: unless-stopped
 
   llm-testing-suite-worker:
-    image: llm-advanced-testing-suite:latest
+    image: llmtest24:latest
     container_name: llm-testing-suite-worker
     environment:
       - PYTHONPATH=/app
